[package]
name = "baodatui-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baodatui-common = { path = "../common" }
baodatui-macros= {path = "../macros"}
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rsocket_rust = "*"
rsocket_rust_transport_websocket = "*"
async-trait = "*"
rand = "*"
crossbeam = "*"
async-scoped = {version = "*", features=["use-tokio"]}